update option map