@@ -3,14 +3,18 @@ package com.example.taskmanage.mapper;
 import com.example.taskmanage.dto.TaskDto;
 import com.example.taskmanage.entity.TaskEntity;
 import com.example.taskmanage.entity.UserEntity;
+import com.example.taskmanage.exception.BaseException;
 import com.example.taskmanage.repository.TaskRepository;
 import com.example.taskmanage.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -57,24 +61,20 @@ public class TaskMapper {
         to.setModifiedDate(from.getModifiedDate());
         to.setModifiedId(from.getModifiedId());
         to.setModifiedName(getUserName(from.getModifiedId()));
-        to.setParentId(from.getParentId());
         to.setTasks(mapModelsFromEntities(taskRepository.findByParentId(from.getId())));
+//        to.setParentTask(
+//                taskRepository.findById(from.getParentId()).map(this::mapModelFromEntity).orElse(new TaskDto()));
 
         return to;
     }
 
     public List<TaskDto> mapModelsFromEntities(List<TaskEntity> from) {
 
-        return from.stream().map(this::mapModelFromEntity).collect(Collectors.toList());
+        return from.stream().map(this::mapModelFromEntity).toList();
     }
 
     private String getUserName(long userId) {
 
-        Optional<UserEntity> userEntity = userRepository.findById(userId);
-
-        if (userEntity.isPresent())
-            return userEntity.get().getUsername();
-
-        return "";
+        return userRepository.findById(userId).map(UserEntity::getUsername).orElse("");
     }
 }
